# r3name

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  r3name.py
.github/workflows/: ci.yaml
src/r3name/: cli.py  config.py  output.py  undo.py
tests/: conftest.py  test_config_options.py  test_r3name.py
