[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r3name"
version = "0.1.0"
description = "Rename files on the command line"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.3",
]

[project.scripts]
r3name = "r3name:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
addopts = "-n auto"
pythonpath = ["src"]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
